// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TableCell rendering renders expected elements 1`] = `
<td
  className="Table--left"
  id="test"
>
  body
</td>
`;

exports[`TableCell rendering renders expected elements when className is set 1`] = `
<td
  className="Table--left TestClass"
  id="test"
>
  body
</td>
`;
